# epx

./: Makefile  Makefile.old  README  README.md  rebar.config  rebar_i386.config  sys.config  vsn.mk
c_src/: Makefile  Makefile.clib  README  SIMD.txt  TODO.md  epx-config.src  epx.c  epx_anim.c  epx_area_body.i  epx_area_common.c  epx_backend.c  epx_backend_cocoa.c  epx_backend_fb.c  epx_backend_macos.c  epx_backend_none.c  epx_backend_x11.c  epx_backend_xcb.c  epx_bitmap.c  epx_canvas.c  epx_cpuid.h  epx_debug.c  epx_dict.c  epx_draw.c  epx_ellipse.c  epx_font.c  epx_gc.c  epx_gif.c  epx_gl.c  epx_hash.c  epx_line.c  epx_lock.c  epx_lode_png.c  epx_nif.c  epx_pixel.c  epx_pixmap.c  epx_png.c  epx_poly.c  epx_sane.c  epx_sft.c  epx_simd.c  (+26 more)
ddscomp/: Makefile.in  configure.ac  ddscomp.cc  ddsgif.cc
include/: epx.h  epx.hrl  epx_anim.h  epx_backend.h  epx_bitmap.h  epx_canvas.h  epx_colors.h  epx_debug.h  epx_dict.h  epx_draw.h  epx_efnt.h  epx_event.h  epx_font.h  epx_gc.h  epx_geometry.h  epx_hash.h  epx_image.hrl  epx_lock.h  epx_menu.hrl  epx_object.h  epx_pixel.h  epx_pixmap.h  epx_poly.h  epx_sft.h  epx_simd.h  epx_t2d.h  epx_t2d.hrl  epx_window.h  epx_window_content.hrl  schrift.h
priv/: .gitignore  cursorb.graffle  cursorw.graffle  epx_askpass
scripts/: vsn-inc
src/: .gitignore  Makefile  crayola.hrl  dbg.hrl  epx.app.src  epx.erl  epx_animation.erl  epx_app.erl  epx_askpass.erl  epx_backend.erl  (+44 more)
tools/ddscomp/: Makefile.in  configure.ac  ddscomp.cc  ddsgif.cc  ddsgif.hh  ddsimg.hh  ddsmpg.cc  ddsmpg.hh  ddspng.cc  ddspng.hh  lhash.c  lhash.cc  lhash.h
(+104 files in other folders)
